Latest drop of fixes and protocol changes