@@ -5,9 +5,10 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.io.EOFException;
 import java.nio.charset.CharacterCodingException;
-import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -24,15 +25,9 @@ public class OkioBufferDataStringTest {
 	public static Stream<Arguments> args() {
 		return Stream.of(
 			arguments(
-				List.of("It was the best of times, it was the worst of times."),
-                StandardCharsets.UTF_16),
-			arguments(
                 List.of("It was the best of times, it was the worst of times."),
                 StandardCharsets.UTF_8),
 
-			arguments(
-				Arrays.asList( "A", "B", "C" ),
-                StandardCharsets.UTF_16),
 			arguments(
 				Arrays.asList( "A", "B", "C" ),
                 StandardCharsets.UTF_8)
@@ -47,18 +42,22 @@ public class OkioBufferDataStringTest {
 
 	@ParameterizedTest
 	@MethodSource("args")
-	public void readWrite(List<String> strings, Charset charset) throws CharacterCodingException {
+	public void readWrite(List<String> strings) throws CharacterCodingException, EOFException {
 		AtomicInteger total_written = new AtomicInteger( 0 );
+		List<Integer> lengths = new ArrayList<>(strings.size());
 		for( String s : strings ) {
-			data.putString( s, charset.newEncoder(), total_written::addAndGet );
+			int written = data.putUtf8String(s);
+			lengths.add(written);
+			total_written.addAndGet(written);
 		}
 
 		System.out.println( "Data: " + data.hex() );
 
 		AtomicInteger total_read = new AtomicInteger( 0 );
 		for( String s : strings ) {
-			assertEquals( s, data.getString( charset, charset.newDecoder(),
-				total_read::addAndGet ) );
+			int length = lengths.remove(0);
+			assertEquals( s, data.getUtf8String( length ));
+			total_read.addAndGet( length );
 		}
 
 		assertEquals( total_written.get(), total_read.get() );
